# wynncraft-api-rust

./: Cargo.toml  README.md
src/: ability.rs  classes.rs  guild.rs  item.rs  leaderboard.rs  lib.rs  map.rs  news.rs  player.rs  search.rs
