[package]
name = "wynncraft_api"
version = "0.0.1"
edition = "2021"
authors = ["de_grote"]
description = "wynncraft api wrapper"
readme = "README.md"
keywords = ["wynncraft", "api"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.12.7" # http calls
serde = { version = "~1.0.210", features = ["derive"] } # serialize and deserialize
serde_json = "~1.0.128" # deserialize from json
thiserror = "~1.0.63" # easier to make errors

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] } # async runtime for testing
